# asciidoc2txt

./: Makefile.am  README.md  asciidoc2txt.sh  configure.ac  mit-plus-license.txt  test-resume-ext.txt  test-resume.adoc  test-resume.html
tests/: build-test.sh
